@@ -72,7 +72,26 @@ module Rails
             plugins
           end
         end
-        
+    end
+
+    # The GemLocator scans all the loaded RubyGems, looking for gems with
+    # a <tt>rails/init.rb</tt> file.
+    class GemLocator < Locator
+      def plugins
+        specs = Gem.loaded_specs.values.select do |spec|
+          spec.loaded_from && # prune stubs
+            File.exist?(File.join(spec.full_gem_path, "rails", "init.rb"))
+        end
+
+        require "rubygems/dependency_list"
+
+        deps = Gem::DependencyList.new
+        deps.add(*specs)
+
+        deps.dependency_order.collect do |spec|
+          Rails::GemPlugin.new(spec)
+        end
+      end
     end
   end
 end
