@@ -1,5 +1,7 @@
 *SVN*
 
+* Added that gems can now be plugins if they include rails/init.rb #11444 [jbarnette]
+
 * Added Plugin#about method to programmatically access the about.yml in a plugin #10979 [lazyatom]
 
     plugin = Rails::Plugin.new(path_to_my_plugin)
